<resources>
    <string name="app_name">trabalho</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Painel</string>
    <string name="title_notifications">Avisos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_cad_cronograma">Cad. Cronograma</string>
    <string name="url_autentificador">URL Autentificador</string>
    <string name="usuario">Usuario</string>
    <string name="int_nome">Prestador do Serviço </string>
    <string name="descricaodoservico">Descrição do Serviço</string>
    <string name="horas_trabalhadas_por_pessoa">Horas trabalhadas por Pessoa</string>
    <string name="quantidades_de_pessoas">Quantidades de Pessoas</string>
    <string name="material">Material</string>
    <string name="celesp_r">Celesp/R$500,00</string>
    <string name="cliente">Cliente</string>
    <string name="title_con_cronograma">Con.credencial</string>
</resources>