<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cronograma.CadCronogramaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usuario" />

            <EditText
                android:id="@+id/intNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/int_nome"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/cliente" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/descricaodoservico" />

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/horas_trabalhadas_por_pessoa" />


            <EditText
                android:id="@+id/editTextText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/quantidades_de_pessoas" />

            <EditText
                android:id="@+id/editTextText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/celesp_r"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/material" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Insira a Data abaixo" />

            <EditText
                android:minHeight="48dp"
                android:id="@+id/editTextDate2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:hint="01/01/2025" />
            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Confirmar" />


        </LinearLayout>
    </ScrollView>

</FrameLayout>